--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,20 @@ img
 {
     height:10vh;
 }
+#excel
+{
+    height: 4vh;
+    width: 10vw;
+    margin-left: 10px;
+    border-radius:10px;
+    border: none;
+    outline: 1px solid black;
+    background-color: rgb(52, 52, 52);
+    color:white;
+    cursor: pointer;
+}
+
+#excel:hover
+{
+    opacity: 0.6;
+}
